fix lists clipping outside the message box

--- a/src/styles/chat.scss
+++ b/src/styles/chat.scss
@@ -94,6 +94,9 @@
         code {
           white-space: pre-wrap;
         }
+        li {
+          list-style-position: inside;
+        }
       }
       &.user {
         align-items: flex-start;
